[package]
name = "ppk"
description = "A tiny, modern and fast package manager"
version = "0.1.0"
authors = ["skyne98 <ahalahan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lz4 = "1.23.2"
tar = "0.4.30"
serde = "1.0.118"
serde_derive = "1.0.118"
semver = { version = "0.11.0", features = ["serde"] }
url = { version = "2.2.0", features = ["serde"] }
anyhow = "1.0.35"
structopt = "0.3.21"
toml = "0.5.7"
derive_builder = "0.9.0"
ion-shell = { git = "https://gitlab.redox-os.org/redox-os/ion", rev = "2bc8826a97929b1878375a5c747e5c4cfed2b10b" }
git2 = "0.13.15"
flate2 = "1.0.19"
reqwest = "0.10.10"
tokio = { version = "1.0.1", features = ["full"] }
